crates/knok/tests/ui/bool_arithmetic.stderr
error: arithmetic operators support numeric tensors only
 --> tests/ui/bool_arithmetic.rs:3:1
  |
3 | #[knok::graph(backend = Backend::LlvmCpu)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `knok::graph` (in Nightly builds, run with -Z macro-backtrace for more info)

error: arithmetic operators support numeric tensors only
 --> tests/ui/bool_arithmetic.rs:8:1
  |
8 | #[knok::graph(backend = Backend::LlvmCpu)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `knok::graph` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `knok::prelude::*`
 --> tests/ui/bool_arithmetic.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
